--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -151,6 +151,9 @@ gChannelBondingMode24GHz=1
 gGoKeepAlivePeriod = 20
 gApKeepAlivePeriod = 20
 
+# Disable rx wakelock
+rx_wakelock_timeout=0
+
 #If set to 0, will not scan DFS channels
 gEnableDFSChnlScan=1
 
